StatisticalFactsheets: fixed charts overflow

--- a/webapp/app/countryLanding/views/statisticalFactsheets/statisticalFactsheets.less
+++ b/webapp/app/countryLanding/views/statisticalFactsheets/statisticalFactsheets.less
@@ -15,6 +15,8 @@
 
   > div {
     position: relative;
+    display: grid;
+    grid-template-rows: auto 1fr;
   }
 
   .header {
